# peekaboo

./: .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  PLAN.md  README.ja.md  README.ko.md  README.md  README.zh.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/: architecture.html  feature-spec.html  index.html  roadmap.html  screen-design.html  tech-stack.html
docs/assets/: doc.css
docs/images/: README.md
src/: i18n.ts  index.html  main.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
