[package]
name = "peekaboo"
version = "0.1.1"
description = "Peekaboo — stealth browser overlay for macOS"
license = "MIT"
edition = "2021"
rust-version = "1.77.2"

[lib]
# The desktop entry point (main.rs) calls into this library.
name = "peekaboo_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# `macos-private-api` is required for transparent windows on macOS
# (App Store ineligible — irrelevant for a personal tool).
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# macOS native window opacity (NSWindow.alphaValue) for the ghost/reveal effect.
# Versions match what Tauri already resolves, so no duplicate objc2 in the tree.
[target."cfg(target_os = \"macos\")".dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSWindow", "NSResponder"] }
